--- a/project/templates/hello.html
+++ b/project/templates/hello.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <title>Flask React</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/style.css') }}">
+
     <!-- styles -->
   </head>
   <body>
@@ -24,22 +27,45 @@
         render: function() {
           return (
             <div className="comment">
-              <h2 className="commentAuthor">
-                {this.props.author}
-              </h2>
-              {this.props.children}
+              <div className="content-left">
+                <img src={this.props.profile_image} alt="profile_image"/>
+              </div>
+              <div className="content-middle">
+                <h2 className="commentAuthor">
+                  {this.props.name} <span className="date">{this.props.date}</span>
+                </h2>
+                <p>{this.props.text}</p>
+              </div>
+              <div className="content-right">
+                <a href={this.props.link_to_post} target="_blank">go to post</a>
+                <p>{this.props.favorite_count}</p>
+              </div>
+              <div>
+                <img src={this.props.img_in_post} alt="no image" className={this.props.img_in_post ? '' : 'hidden'}/>
+                <p>{this.props.img_in_post}</p>
+              </div>
             </div>
           );
         }
       });
+
+
+      /*
+        type_of_post
+        date
+        favorite_count
+        name
+        text
+        profile_image
+        link_to_post
+      */
 
       // tutorial10.js
       var CommentList = React.createClass({
         render: function() {
           var commentNodes = this.props.data.map(function (comment) {
             return (
-              <Comment author={comment.name}>
-                {comment.text}
+              <Comment name={comment.name} date={comment.date} favorite_count={comment.favorite_count} text={comment.text} profile_image={comment.profile_image} link_to_post={comment.link_to_post} img_in_post={comment.img_in_post}>
               </Comment>
             );
           });
