--- a/project/templates/thesheep.html
+++ b/project/templates/thesheep.html
@@ -85,7 +85,7 @@
         handleClick: function(i) {
           console.log('You clicked: ', i);
           $.ajax({
-            url: 'http://127.0.0.1:5000/savepost',
+            url: 'http://127.0.0.1:5000/deletepost',
             method: 'POST',
             data: JSON.stringify(i),
             contentType: 'application/json;charset=UTF-8',
@@ -114,6 +114,8 @@
                   <div>
                   <Comment name={comment.name} date={comment.date} favorite_count={comment.favorite_count} text={comment.text} profile_image={comment.profile_image} link_to_post={comment.link_to_post} img_in_post={comment.img_in_post} type_of_post={comment.type_of_post} outside_link={comment.outside_link}>
                   </Comment>
+                  <button onClick={this.handleClick.bind(this, comment)}>remove post</button>
+                  <p>{this.state.message}</p>
                   </div>
                 );
               }, this)}
